test/class/valid/emptyClass.wacc
begin
  class c is
    init() is skip end
  end
  println 1
end
