test/class/invalid/noConstructor.wacc
begin
  class Dog is
    
    int x;
  
  end
  
  println x

end
